Change kitchen-sink with new theme

--- a/example/index.html
+++ b/example/index.html
@@ -60,8 +60,9 @@
                 <a href="#" data-view-aside="features" data-icon="menu"></a>
             </nav>
             <img src="static/images/logo.png" class="title centered">
+            <h1 class="title"> <span class="tag count">2.2</span></h1>
 
-            <nav class="right">
+            <nav class="on-right">
                 <a href="#" data-action="twitter" class="button" data-icon="brand twitter" data-article="main-article"></a>
                 <!--
                 <a href="#" data-action="twitter" class="button" data-icon="brand twitter" data-article="main-article" data-label="twitter"></a>
