--- a/example/static/asides/right.html
+++ b/example/static/asides/right.html
@@ -1,4 +1,4 @@
-<aside id="right" class="right">
+<aside id="right" class="on-right">
     <header data-title="Example of Aside"></header>
     <article class="list active">
         <ul>
