--- a/example/static/sections/carousel.html
+++ b/example/static/sections/carousel.html
@@ -1,8 +1,8 @@
 <section id="carousel" data-transition="slide">
-    <header data-back="home">
+    <header data-back="chevron-left">
         <div class="centered title">Photo Nº<span>1</span></div>
 
-        <nav class="right">
+        <nav class="on-right">
             <a href="#" data-action="carousel" data-direction="left" data-icon="arrow-left"></a>
             <a href="#" data-action="carousel" data-direction="right" data-icon="arrow-right"></a>
         </nav>
