--- a/example/static/sections/form.html
+++ b/example/static/sections/form.html
@@ -1,6 +1,6 @@
 <section id="form" data-transition="slide">
-    <header data-title="Form Elements" data-back="home">
-        <nav class="right">
+    <header data-title="Form Elements" data-back="chevron-left">
+        <nav class="on-right">
             <button data-label="test"></button>
             <button data-icon="edit"></button>
         </nav>
