--- a/example/static/sections/layout.html
+++ b/example/static/sections/layout.html
@@ -1,7 +1,7 @@
 <section id="layout" data-transition="slide">
-    <header data-title="Layout" data-back="home">
-        <nav class="right">
-            <button data-view-section="splash" data-async="static/sections/splash.html" data-label="splash"></button>
+    <header data-title="Layout" data-back="chevron-left">
+        <nav class="on-right">
+            <button data-view-section="splash" data-async="static/sections/splash.html" data-icon="user"></button>
         </nav>
     </header>
 
