--- a/example/static/sections/layoutevents.html
+++ b/example/static/sections/layoutevents.html
@@ -1,5 +1,5 @@
 <section id="layoutevents" data-transition="slide">
-    <header data-title="Layout Events" data-back="home"></header>
+    <header data-title="Layout Events" data-back="chevron-left"></header>
     <article class="list indented">
         <ul>
             <li class="dark">
