--- a/example/static/sections/menu.html
+++ b/example/static/sections/menu.html
@@ -3,7 +3,7 @@
         <nav>
             <a href="#" data-view-menu="options" data-icon="menu"></a>
         </nav>
-        <nav class="right">
+        <nav class="on-right">
             <a href="#" data-view-menu="options-icons" data-icon="grid"></a>
         </nav>
     </header>
