--- a/example/static/sections/pull.html
+++ b/example/static/sections/pull.html
@@ -1,6 +1,6 @@
 <section id="pull" data-pull="arrow-down" data-transition="slide">
 
-    <header data-title="Pull & Refresh" data-back="home"></header>
+    <header data-title="Pull & Refresh" data-back="chevron-left"></header>
 
     <article class="active list indented">
         <ul>
@@ -64,7 +64,7 @@
 
         <li>
             <a href="#">
-                <div class="right">.right</div>
+                <div class="on-right">.right</div>
                 <strong>&lt;strong&gt; element</strong>
                 <small>with &lt;small&gt; element</small>
             </a>
@@ -74,7 +74,7 @@
             <a href="#">
                 <strong>&lt;strong&gt; element</strong>
                 <small>with &lt;small&gt; element</small>
-                <div class="right">.right</div>
+                <div class="on-right">.right</div>
             </a>
         </li>
 
