--- a/example/test.html
+++ b/example/test.html
@@ -31,7 +31,7 @@
 
             <div class="title centered">Folks</div>
 
-            <nav class="right">
+            <nav class="on-right">
                 <button data-icon="user" class="button" data-article="folks" data-label="Products" data-view-article="products" data-async="static/articles/products.html"></button>
             </nav>
         </header>
@@ -116,7 +116,7 @@
     </section>
 
     <section id="test" data-transition="slide">
-        <header data-title="Test" data-back="home"></header>
+        <header data-title="Test" data-back="chevron-left"></header>
         <article></article>
     </section>
 
@@ -161,7 +161,7 @@
 
     <aside id="features" >
         <header data-title="Features">
-            <nav class="right">
+            <nav class="on-right">
                 <a href="#" class="buttons" data-icon="settings"></a>
             </nav>
         </header>
@@ -193,7 +193,7 @@
         </article>
     </aside>
 
-    <aside id="features2" class="right">
+    <aside id="features2" class="on-right">
         <header data-title="Features 2"></header>
 
         <article class="list scroll active">
