--- a/example/static/sections/aside.html
+++ b/example/static/sections/aside.html
@@ -1,6 +1,6 @@
 <section id="aside" data-transition="slide" data-aside="right">
-    <header data-title="Asides" data-back="home">
-        <nav class="right">
+    <header data-title="Asides" data-back="chevron-left">
+        <nav class="on-right">
             <button data-view-aside="right" data-label="Show Aside"></button>
         </nav>
     </header>
