--- a/example/static/sections/scroll.html
+++ b/example/static/sections/scroll.html
@@ -1,5 +1,5 @@
 <section id="scroll" data-transition="slide">
-    <header data-title="Scrolls"  data-back="home"></header>
+    <header data-title="Scrolls"  data-back="chevron-left"></header>
 
     <article>
         <h1>.scroll stylesheet class</h1>
