Fix for async resources (sections)

--- a/example/index.html
+++ b/example/index.html
@@ -54,7 +54,7 @@
 
 <body>
 
-    <section id="main" data-transition="" data-aside="features" class="drag">
+    <section id="main" data-transition="slide" data-aside="features" class="drag">
         <header>
             <nav>
                 <a href="#" data-view-aside="features" data-icon="menu"></a>
