--- a/example/static/asides/features.html
+++ b/example/static/asides/features.html
@@ -1,4 +1,4 @@
-<aside id="features">
+<aside id="features" data-transition="left">
     <header data-title="Features">
         <nav class="on-right">
             <a href="#" class="buttons" data-icon="settings"></a>
