--- a/example/navigation.tablet.html
+++ b/example/navigation.tablet.html
@@ -119,7 +119,7 @@
         Lungo.init({
             name: 'Flexbox',
             version: '2.2',
-            history: true
+            history: false
         });
         $$("[data-router=back]").tap(function(event) { Lungo.Router.back();});
     </script>
