Added examples to test tablet functionality

--- a/example/navigation.tablet2.html
+++ b/example/navigation.tablet2.html
@@ -33,6 +33,11 @@
             </ul>
         </article>
     </aside>
+    <aside id="menu2" data-transition="left">
+        <header data-title="My mailbox 2"></header>
+        <article id="menu_article" class="active list scroll">aaaa
+        </article>
+    </aside>
 
     <!-- ===================================================================================== -->
     <!-- ===================================================================================== -->
@@ -80,7 +85,7 @@
         </footer>
     </section>
 
-    <section id="mail2">
+    <section id="mail2" data-aside="menu" data-transition="slide">
         <header data-title="First mail">
             <nav class="left">
                 <button data-view-section="back">BaCk</button>
@@ -90,7 +95,8 @@
             mail 1
         </article>
     </section>
-    <section id="mail">
+
+    <section id="mail" data-aside="menu" data-transition="slide">
         <header data-title="Second mail">
             <nav class="left">
                 <button data-view-section="back">BaCk</button>
