[MOBILE] Animation slide/cover

--- a/example/navigation.html
+++ b/example/navigation.html
@@ -29,7 +29,7 @@
         <article></article>
     </aside>
 
-    <section id="zero" data-transition data-children="one" data-aside="a">
+    <section id="zero" data-transition="slide" data-children="one" data-aside="a">
         <header data-title="Zero">
             <nav class="left">
                 <button data-icon="list" data-view-aside="a"></button>
