Fixes for tablet examples

--- a/example/tablet1.html
+++ b/example/tablet1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Lungo Flexbox - SDK</title>
+    <title>Tablet1</title>
     <meta name="description" content="">
     <meta name="author" content="Javier Jiménez Villar (@soyjavi)">
     <meta name="HandheldFriendly" content="True">
@@ -74,6 +74,13 @@
                 <li data-view-section="team">Renault</li><li data-view-section="team">Renault</li>
             </ul>
         </article>
+
+        <footer>
+            <nav>
+                <a href="#" data-view-article="byTeam" data-icon="calendar">byTeam</a>
+                <a href="#" data-view-article="byDriver" data-icon="calendar">byDriver</a>
+            </nav>
+        </footer>
     </section>
 
     <!-- driver section -->
