Remove text-shadow in header

--- a/example/components.html
+++ b/example/components.html
@@ -59,7 +59,7 @@
     <section id="layout" data-transition="" data-aside="features">
         <header data-tistle="Layout">
             <nav class="on-left">
-                <a href="#" data-view-aside="features" data-icon="home"></a>
+                <a href="#" data-view-aside="features" data-icon="menu"></a>
             </nav>
             <h1 class="title centered">
                 <!-- Brownie -->
