--- a/example/components.html
+++ b/example/components.html
@@ -103,7 +103,19 @@
         </nav>
 
         <article id="layout-art2" class="list scroll ">
+            <div class="form indented">
+                <div>
+                 <div data-control-checkbox="check" ></div>
 
+                 <hr>
+<input type="checkbox" checked>
+<hr>
+<input type="checkbox">
+<hr>
+<input type="checkbox" checked>
+<hr>
+             </div>
+</div>
             <ul>
                 <li class="selectable">
                     <strong>&lt;li .selectable&gt; + &lt;strong&gt; </strong>
