--- a/example/static/sections/aside.html
+++ b/example/static/sections/aside.html
@@ -1,7 +1,7 @@
 <section id="aside" data-transition="slide" data-aside="right">
     <header data-title="Asides" data-back="chevron-left">
         <nav class="on-right">
-            <button data-view-aside="right" data-label="Show Aside"></button>
+            <button data-view-aside="right" data-icon="menu"></button>
         </nav>
     </header>
     <article id="aside-example"></article>
