Changes on aside

--- a/example/static/asides/features.html
+++ b/example/static/asides/features.html
@@ -8,7 +8,7 @@
     <article class="list scroll active">
         <ul>
             <!-- Basic Layout -->
-            <li data-view-article="main-article">
+            <li data-view-article="main-article" data-icon="question-sign">
                 <strong>Meet the framework</strong>
                 <small>Real Cross-Device</small>
             </li>
