--- a/example/index.html
+++ b/example/index.html
@@ -59,18 +59,8 @@
                 <a href="#" data-view-aside="features" data-icon="menu"></a>
             </nav>
             <img src="static/images/logo.png" class="title centered">
-            <h1 class="title"> <span class="tag count">2.2</span></h1>
-
             <nav class="on-right">
-                <a href="#" data-action="twitter" class="button" data-icon="brand twitter" data-article="main-article"></a>
-                <!--
-                <a href="#" data-action="twitter" class="button" data-icon="brand twitter" data-article="main-article" data-label="twitter"></a>
-                <a href="#" data-action="twitter" class="button" data-article="main-article" data-label="twitter"></a>
-
-                <button data-action="twitter" data-icon="brand twitter" data-article="main-article"></button>
-                <button data-action="twitter" data-icon="brand twitter" data-article="main-article" data-label="twitter"></button>
-                <button data-action="twitter" data-article="main-article" data-label="twitter"></button>
-                -->
+                <a href="#"  ><abbr class="text tiny ">v2.2</abbr></a>
             </nav>
         </header>
 
@@ -88,31 +78,45 @@
             <a href="#" data-view-article="list-examples" data-label="Examples"></a>
         </nav>
 
-        <article id="main-article" class="list indented scroll">
+        <article id="main-article" class="list indenteds scroll">
             <ul>
-                <li class="secondary">
-                    <strong>
-                        A framework for developers who want to design, build and share cross device apps.
-                    </strong>
+                <li class="text small">
+                    A framework based on HTML5 for developers who want to design, build and share cross device Apps.
                 </li>
-                <li class="feature">
-                    <strong>HTML5 Optimized Apps</strong>
-                    Lungo Framework supports open web standards, such as HTML5, CSS3 and JavaScript. It brings consistent browser environment across mobiles, tvs and desktop devices.
+                <li>
+                    <strong class="text bold">Optimized</strong>
+                    <span class="text tiny">
+                        Lungo supports open web standards, such as HTML5, CSS3 and JavaScript. It brings consistent browser environment across mobiles, tvs and desktop devices.
+                    </span>
                 </li>
-                <li class="feature">
-                    <strong>Powerfull JavaScript API</strong>
-                    Each new line of code in Lungo is welcome, we hope that Developers and restless minds help us to improve day by day this humble project.
+                <li>
+                    <strong class="text bold">Powerfull JavaScript API</strong>
+                    <span class="text tiny">
+                        There are many ways to create apps, and not always is optimized. Lungo offers you a robust API so you can have complete control of your app.
+                    </span>
                 </li>
-                <li class="feature">
-                    <strong>Multi-Device full support</strong>
-                    Is known that create apps for each platform is expensive, this situation is increased by the arrival of tablets and SmartTVs. Lungo will suit all of them creating a unique and amazing UX.
+                <li>
+                    <strong class="text bold">Lightweight & Scalable</strong>
+                    <span class="text tiny">
+                        Create apps for each platform is hard, this situation is increased by the arrival of new devices. Lungo will suit all of them creating a unique and amazing UX.
+                    </span>
                 </li>
-                <li class="feature">
-                    <strong>Open Source Project</strong>
-                    Each new line of code in Lungo is welcome, we hope that Developers and restless minds help us to improve day by day this humble project.
+                <li>
+                    <strong class="text bold">Real Cross-Device</strong>
+                    <span class="text tiny">
+                        Create apps for each platform is hard, this situation is increased by the arrival of new devices. Lungo will suit all of them creating a unique and amazing UX.
+                    </span>
+                </li>
+                <li>
+                    <strong class="text bold">Open Source Project</strong>
+                    <span class="text tiny">
+                        Each new line of code in Lungo is welcome, we hope that Developers and restless minds help us to improve day by day this humble project.
+                    </span>
                 </li>
                 <li>
                     <a href="https://twitter.com/intent/tweet?original_referer=http%3A%2F%2Flungo.tapquo.com%2F&text=@lungojs a framework for developers who want to design, build and share cross device apps" target="_blank" class="button theme" data-label="Tweet me"></a>
+
+                    <a href="http://lungo.tapquo.com" target="_blank" class="button margin-top secondary" data-label="Go to Project's page"></a>
                 </li>
             </ul>
         </article>
