--- a/example/others/tablet3.html
+++ b/example/others/tablet3.html
@@ -13,9 +13,9 @@
     <meta http-equiv="cleartype" content="on">
 
     <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="components/lungo.brownie/lungo.css">
-    <link rel="stylesheet" href="components/lungo.brownie/lungo.theme.css">
-    <link rel="stylesheet" href="components/lungo.icon/lungo.icon.css">
+    <link rel="stylesheet" href="../components/lungo.brownie/lungo.css">
+    <link rel="stylesheet" href="../components/lungo.brownie/lungo.theme.css">
+    <link rel="stylesheet" href="../components/lungo.icon/lungo.icon.css">
 
 </head>
 
@@ -78,8 +78,8 @@
 
 
     <!-- Lungo dependencies -->
-    <script src="components/quojs/quo.js"></script>
-    <script src="components/lungo.brownie/lungo.debug.js"></script>
+    <script src="../components/quojs/quo.js"></script>
+    <script src="../components/lungo.brownie/lungo.debug.js"></script>
 
     <!-- LungoJS - Sandbox App -->
     <script>
