--- a/example/others/tablet2.html
+++ b/example/others/tablet2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Lungo Flexbox - SDK</title>
+    <title>Tablet2</title>
     <meta name="description" content="">
     <meta name="author" content="Javier Jiménez Villar (@soyjavi)">
     <meta name="HandheldFriendly" content="True">
