--- a/example/others/tablet4.html
+++ b/example/others/tablet4.html
@@ -13,9 +13,10 @@
     <meta http-equiv="cleartype" content="on">
 
     <!-- Main Stylesheet -->
-    <link rel="stylesheet" href="../components/lungo.brownie/lungo.css">
-    <link rel="stylesheet" href="../components/lungo.brownie/lungo.theme.css">
-    <link rel="stylesheet" href="../components/lungo.icon/lungo.icon.css">
+    <link rel="stylesheet" href="../../package/lungo/lungo.css">
+    <link rel="stylesheet" href="../../package/lungo/lungo.theme.css">
+    <link rel="stylesheet" href="../../package/lungo.icon/lungo.icon.css">
+
 </head>
 
 <body>
@@ -42,9 +43,10 @@
         </article>
     </section>
 
+
     <!-- Lungo dependencies -->
     <script src="../components/quojs/quo.js"></script>
-    <script src="../components/lungo.brownie/lungo.debug.js"></script>
+    <script src="../../package/lungo/lungo.js"></script>
     <script>
         Lungo.init({
             name: 'test',
