Some fixes on tablet routering

--- a/example/others/tablet1.html
+++ b/example/others/tablet1.html
@@ -21,6 +21,14 @@
 
 <body>
 
+<!--
+    <section id="start">
+        <article>
+            <button data-view-section="ranking" data-icon="arrow-left"> start</button>
+        </article>
+    </section>
+ -->
+
     <!-- aside -->
     <aside id="menu">
         <header data-title="Formula1"></header>
@@ -106,7 +114,6 @@
         <article id="team-article">
             <button class="anchor" data-view-section="comments">view comments</button>
         </article>
-
     </section>
 
     <section id="comments" data-transition="slide">
@@ -121,11 +128,9 @@
         </article>
     </section>
 
-
-
     <!-- Lungo dependencies -->
     <script src="../components/quojs/quo.js"></script>
-    <script src="../../package/lungo/lungo.js"></script>
+    <script src="../../build/lungo.debug.js"></script>
 
     <!-- LungoJS - Sandbox App -->
     <script>
@@ -137,3 +142,13 @@
     </script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
