--- a/example/others/tablet4.html
+++ b/example/others/tablet4.html
@@ -23,14 +23,14 @@
 
     <section id="security" data-transition="slide">
         <article>
-            security
+            securityyyyyyyyy
             <button data-view-section="main">Go main!</button>
         </article>
     </section>
 
-    <section id="main" data-transition="slide" data-children="other">
+    <section id="main" data-transition="slide">
         <article>
-            main
+            main!!!
             <button data-view-section="back">Go back!</button>
             <button data-view-section="other">Go other!</button>
         </article>
@@ -46,7 +46,8 @@
 
     <!-- Lungo dependencies -->
     <script src="../components/quojs/quo.js"></script>
-    <script src="../../package/lungo/lungo.js"></script>
+    <script src="../../build/lungo.debug.js"></script>
+
     <script>
         Lungo.init({
             name: 'test',
