--- a/example/others/tablet3.html
+++ b/example/others/tablet3.html
@@ -79,7 +79,8 @@
 
     <!-- Lungo dependencies -->
     <script src="../components/quojs/quo.js"></script>
-    <script src="../../package/lungo/lungo.js"></script>
+    <script src="../../build/lungo.debug.js"></script>
+
 
     <!-- LungoJS - Sandbox App -->
     <script>
