--- a/example/others/tablet1.html
+++ b/example/others/tablet1.html
@@ -20,80 +20,78 @@
 </head>
 
 <body>
-
-<!--
-    <section id="start">
-        <article>
-            <button data-view-section="ranking" data-icon="arrow-left"> start</button>
-        </article>
-    </section>
- -->
-
     <!-- aside -->
     <aside id="menu">
-        <header data-title="Formula1"></header>
+        <header data-title="Aside"></header>
         <article class="active list scroll">
             <ul>
-                <li data-view-article="byDriver">By driver</li>
-                <li data-view-article="byTeam">By team</li>
+                <li data-view-article="byDriver" data-icon="user">
+                    <strong class="text bold">Drivers</strong>
+                </li>
+                <li data-view-article="byTeam" data-icon="group">
+                    <strong class="text bold">Teams</strong>
+                </li>
             </ul>
         </article>
     </aside>
 
     <!-- main section with articles -->
     <section id="ranking" data-transition="slide" data-children="driver team" data-aside="menu">
-        <header data-title="Ranking">
+        <header data-title="Drivers">
             <nav class="left">
                 <button data-icon="list" data-view-aside="menu"></button>
             </nav>
-            <nav class="on-right"></nav>
         </header>
         <article id="byDriver" class="list scroll">
-            <ul>
-                <li class="active"><h1>Drivers</h1></li>
-                <li data-view-section="driver">Hamilton</li><li data-view-section="driver">Hamilton</li>
-                <li data-view-section="driver">Vettel</li><li data-view-section="driver">Vettel</li>
-                <li data-view-section="driver">Webber</li><li data-view-section="driver">Webber</li>
-                <li data-view-section="driver">Alonso</li><li data-view-section="driver">Alonso</li>
-                <li data-view-section="driver">Hamilton</li><li data-view-section="driver">Hamilton</li>
-                <li data-view-section="driver">Vettel</li><li data-view-section="driver">Vettel</li>
-                <li data-view-section="driver">Webber</li><li data-view-section="driver">Webber</li>
-                <li data-view-section="driver">Alonso</li><li data-view-section="driver">Alonso</li>
-                <li data-view-section="driver">Hamilton</li><li data-view-section="driver">Hamilton</li>
-                <li data-view-section="driver">Vettel</li><li data-view-section="driver">Vettel</li>
-                <li data-view-section="driver">Webber</li><li data-view-section="driver">Webber</li>
-                <li data-view-section="driver">Alonso</li><li data-view-section="driver">Alonso</li>
+            <ul data-view-section="driver">
+                <li class="thumb big">
+                    <img src="http://www.formula1.com/photos/teams_and_drivers/driver_profile/main/main_profile_828.jpg"/>
+                    <div>
+                        <strong class="text bold">Lewis Hamilton</strong>
+                        <span>lorem ipsum</span>
+                        <small>Mercedes</small>
+
+                    </div>
+                </li>
+                
+                <li class="thumb big">
+                    <img src="http://www.formula1.com/photos/teams_and_drivers/driver_profile/main/main_profile_30.jpg"/>
+                    <div>
+                         <div class="on-right text tiny">lorem ipsum</div>
+                        <strong class="text bold">Fernando Alonso</strong>
+                        <small>Ferrari</small>
+                    </div>
+                </li>
+
+
+                <li>Hamilton</li>
+                <li>Vettel</li><li>Vettel</li>
+                <li>Webber</li><li>Webber</li>
+                <li>Alonso</li><li>Alonso</li>
+                <li>Hamilton</li><li>Hamilton</li>
+                <li>Vettel</li><li>Vettel</li>
+                <li>Webber</li><li>Webber</li>
+                <li>Alonso</li><li>Alonso</li>
+                <li>Hamilton</li><li>Hamilton</li>
+                <li>Vettel</li><li>Vettel</li>
+                <li>Webber</li><li>Webber</li>
+                <li>Alonso</li><li>Alonso</li>
             </ul>
         </article>
         <article id="byTeam" class="list scroll">
             <ul>
-                <li class="active"><h1>Teams</h1></li>
                 <li data-view-section="team">Ferrari</li><li data-view-section="team">Ferrari</li>
                 <li data-view-section="team">McLaren</li><li data-view-section="team">McLaren</li>
                 <li data-view-section="team">RedBull</li><li data-view-section="team">RedBull</li>
                 <li data-view-section="team">Renault</li><li data-view-section="team">Renault</li>
-                <li data-view-section="team">Ferrari</li><li data-view-section="team">Ferrari</li>
-                <li data-view-section="team">McLaren</li><li data-view-section="team">McLaren</li>
-                <li data-view-section="team">RedBull</li><li data-view-section="team">RedBull</li>
-                <li data-view-section="team">Renault</li><li data-view-section="team">Renault</li>
-                <li data-view-section="team">Ferrari</li><li data-view-section="team">Ferrari</li>
-                <li data-view-section="team">McLaren</li><li data-view-section="team">McLaren</li>
-                <li data-view-section="team">RedBull</li><li data-view-section="team">RedBull</li>
                 <li data-view-section="team">Renault</li><li data-view-section="team">Renault</li>
             </ul>
         </article>
-
-        <footer>
-            <nav>
-                <a href="#" data-view-article="byTeam" data-icon="calendar">byTeam</a>
-                <a href="#" data-view-article="byDriver" data-icon="calendar">byDriver</a>
-            </nav>
-        </footer>
     </section>
 
     <!-- driver section -->
     <section id="driver" data-transition="slide">
-        <header data-title="Ranking dirvers">
+        <header data-title="Driver Info">
             <nav class="left">
                 <button data-view-section="back" data-icon="arrow-left"></button>
             </nav>
